Fix HTMLObjectElement printing in iframes.

LazyReattachIfAttached is not idempotent. Calling it will cause
HTMLObjectElements to discard their contents, which must be asynchronously
regenerated. Avoid calling it if we think it won't have an effect.

This still leaves the edge case of HTMLObjectElements in display:none iframes
not printing correctly.

Bug: 838760
Change-Id: I5d4fdbfe7e2710b824c3ecc446385fae09cbc7c7
Reviewed-on: https://chromium-review.googlesource.com/1053882
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559652}
Former-commit-id: 0bb8bde5753009711d89b9608921b6f6b48e9673